--- a/fitbit-analysis.ipynb
+++ b/fitbit-analysis.ipynb
@@ -1,6 +1,49 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt # default library for making plots\n",
+    "import seaborn as sns # for making prettier plots!\n",
+    "import datetime\n",
+    "import math\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "pd.set_option('display.max_columns', None) # to see all columns in the pd dataframe\n",
+    "%config InlineBackend.figure_format = 'retina' # for the crispier version of plots for retina screens\n",
+    "\n",
+    "matplotlib.style.use('ggplot')\n",
+    "plt.rcParams['figure.figsize'] = [12.0, 6.0]"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
