readme and formatting

--- a/fitbit-intraday-analysis.ipynb
+++ b/fitbit-intraday-analysis.ipynb
@@ -11,13 +11,15 @@
     "2. Export Your Account Archive - took < 15 minutes prepare export for download\n",
     "    Note this can only be requested once per 24hours.\n",
     "\n",
-    "After both of those are finished downloading, you should have a csv file named fitbit_export_<date>.csv and MyFitbitData.zip. Decompress the MyFitbitData.zip file and you should see a folder called <YourName> with 10 or so folders inside. This analysis uses only the user-site-export and the sleep-score folders. \n",
+    "After both of those are finished downloading, you should have a csv file named \"fitbit_export_xxxxxxxx.csv\" (where xxxxxxxx is the date of export) and \"MyFitbitData.zip\". Decompress the \"MyFitbitData.zip\" file and you should see a folder called \"<YourName>\" with 10 or so folders inside. This analysis uses only the user-site-export and the sleep-score folders. \n",
     "\n",
     "## Download This Repo\n",
-    "In order to run this program properly, first download this repo. Then, copy fitbit_export_<date>.csv into fitbit-sleep-analyzer/data and rename it to fitbit_export_month.csv. From the unzipped MyFitbitData folder, copy the /sleep-score and /user-site-export folders into fitbit-sleep-analyzer/data as well.\n",
+    "In order to run this program properly, first download this repo. Then, copy \"fitbit_export_xxxxxxxx.csv\" into \"fitbit-sleep-analyzer/data\" and rename it to \"fitbit_export_month.csv\". From the unzipped MyFitbitData folder, copy the \"/sleep-score\" and \"/user-site-export\" folders into \"fitbit-sleep-analyzer/data\" as well.\n",
     "    \n",
-    "## Note About Time Zones\n",
+    "## Note About Time Zones & File Privacy\n",
     "The account archive timestamps are stored in UTC. For ease, I directly converted them to my timezone (Eastern Standard Time, EST) by subtracting 4 hours. \n",
+    "\n",
+    "In addition, none of the \n",
     "\n",
     "## Web API Analysis\n",
     "If you're interested, I also analyzed data via the Web API in a separate jupyter notebook. called fitbit-data-analysis.ipynb on my github at https://github.com/mliu356/fitbit-sleep-analyzer/blob/master/fitbit-data-analysis.ipynb \n",
@@ -692,17 +694,6 @@
     "    * **This is interesting because deep sleep is primarily for physical and mental recovery and is a main component of high sleep quality; thus, more sleep may not always mean better sleep.** \n",
     "* Restlessness (based on minutes awake vs. minutes in bed) is positively correlated to \"Minutes very active\" but negatively correlated to \"Minutes Fairly Active.\"\n",
     "* \"Time of day\" is highly correlated to \"Duration\" and \"Minutes Very Active\" meaning that workouts later in the day are likely to be longer and more intense. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Conclusion & Further Analysis\n",
-    "\n",
-    "My initial inspiration for this data analysis experiment was the fact that I was sleeping more than ever and still waking up unexpectedly tired. I hypothesized that this was a result of my unusual circustances given the COVID-19 outbreak-- without normal social activities or school demands, I was exercising more often than usual and at different times of day.  This experiment was intended to discern any measurable correlations between these workouts during the day and the quality of sleep I got the following night.\n",
-    "\n",
-    "I'm glad I completed this project because I gleaned some interesting insights and got to practice my data science skills, but given the small sample size, I cannot come to any conclusions. For future analyses, I would be interested in using the minute-by-minute heart rate or caloric data for more detailed breakdowns. I would also like to re-run these experiments in a few months when I have more data to shield against outliers-- for context, at the time of this initial run, I've only been wearing this Fitbit for ~20 days."
    ]
   }
  ],
