--- a/fitbit-intraday-analysis.ipynb
+++ b/fitbit-intraday-analysis.ipynb
@@ -16,10 +16,8 @@
     "## Download This Repo\n",
     "In order to run this program properly, first download this repo. Then, copy \"fitbit_export_xxxxxxxx.csv\" into \"fitbit-sleep-analyzer/data\" and rename it to \"fitbit_export_month.csv\". From the unzipped MyFitbitData folder, copy the \"/sleep-score\" and \"/user-site-export\" folders into \"fitbit-sleep-analyzer/data\" as well.\n",
     "    \n",
-    "## Note About Time Zones & File Privacy\n",
+    "## Note About Time Zones\n",
     "The account archive timestamps are stored in UTC. For ease, I directly converted them to my timezone (Eastern Standard Time, EST) by subtracting 4 hours. \n",
-    "\n",
-    "In addition, none of the \n",
     "\n",
     "## Web API Analysis\n",
     "If you're interested, I also analyzed data via the Web API in a separate jupyter notebook. called fitbit-data-analysis.ipynb on my github at https://github.com/mliu356/fitbit-sleep-analyzer/blob/master/fitbit-data-analysis.ipynb \n",
